[DOM8-52] javadoc for gameBoard